added lubrication section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
-        "Bellcrank"
+        "Bellcrank",
+        "Torrington"
     ],
     "cSpell.enabledFileTypes": {
         "html": true
