--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Hartzell",
         "Kawak",
         "Olney",
+        "pushrod",
         "Torrington"
     ],
     "cSpell.enabledFileTypes": {
