engine section updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Bellcrank",
         "Hartzell",
+        "Ignitor",
         "Kawak",
         "Olney",
         "pitot",
