--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Olney",
         "pitot",
         "pushrod",
+        "restrictor",
         "Torrington"
     ],
     "cSpell.enabledFileTypes": {
