engine replacement update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Kawak",
         "Olney",
         "pitot",
+        "Powerplant",
         "pushrod",
         "restrictor",
         "Torrington"
