--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "Powerplant",
         "pushrod",
         "restrictor",
+        "SCEET",
         "Torrington"
     ],
     "cSpell.enabledFileTypes": {
