got rid of time delay for rendering

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-        "module": "CommonJS",
+        // "module": "CommonJS",
+        "module": "esnext",
         "target": "ES2021"
     },
 }
