--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
+        "Additel",
+        "Ahlers",
+        "Alumel",
+        "Barfield",
         "Bellcrank",
+        "Chromel",
         "Hartzell",
         "Ignitor",
         "Kawak",
