electrical section additions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "Ignitor",
         "Kawak",
         "Olney",
+        "overspeed",
         "pitot",
         "Powerplant",
         "pushrod",
