--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "pushrod",
         "restrictor",
         "SCEET",
+        "tensioner",
         "Torrington"
     ],
     "cSpell.enabledFileTypes": {
