reformatted to tables to match SL347 format and to look better

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "Powerplant",
         "pushrod",
         "restrictor",
+        "SAIB",
         "SCEET",
         "Skurka",
         "tensioner",
