cleaning up flap inspections

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Alumel",
         "Barfield",
         "Bellcrank",
+        "bellcranks",
         "Chromel",
         "gatebox",
         "Hartzell",
