--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "pitot",
         "Powerplant",
         "pushrod",
+        "pushrods",
         "restrictor",
         "SAIB",
         "SCEET",
