--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Bellcrank",
         "bellcranks",
         "Chromel",
+        "Fram",
         "gatebox",
         "Hartzell",
         "Ignitor",
