--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,8 @@
         "SCEET",
         "Skurka",
         "tensioner",
-        "Torrington"
+        "Torrington",
+        "Zener"
     ],
     "cSpell.enabledFileTypes": {
         "html": true
