--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Barfield",
         "Bellcrank",
         "bellcranks",
+        "Brackett",
         "Chromel",
         "Fram",
         "gatebox",
