--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,12 @@
         "Additel",
         "Ahlers",
         "Alumel",
+        "Amsafe",
         "Barfield",
         "Bellcrank",
         "bellcranks",
         "Brackett",
+        "Chromated",
         "Chromel",
         "Fram",
         "gatebox",
