updates per manual party #1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "Additel",
+        "Adel",
         "Ahlers",
         "Alumel",
         "Amsafe",
@@ -11,6 +12,7 @@
         "Chromated",
         "Chromel",
         "Fram",
+        "FRDS",
         "gatebox",
         "Hartzell",
         "Ignitor",
@@ -27,6 +29,7 @@
         "Skurka",
         "tensioner",
         "Torrington",
+        "Tyton",
         "Zener"
     ],
     "cSpell.enabledFileTypes": {
