trying to make this section make sense

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "Bellcrank",
         "bellcranks",
         "Brackett",
+        "castellation",
+        "castellations",
         "Chromated",
         "Chromel",
         "Fram",
