--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Additel",
         "Adel",
+        "Agrinautics",
         "Ahlers",
         "Alumel",
         "Amsafe",
@@ -19,6 +20,7 @@
         "Hartzell",
         "Ignitor",
         "Kawak",
+        "Micronair",
         "Olney",
         "overspeed",
         "pitot",
