--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,22 +4,27 @@
         "Adel",
         "Agrinautics",
         "Ahlers",
+        "Alodine",
         "Alumel",
         "Amsafe",
         "Barfield",
         "Bellcrank",
         "bellcranks",
         "Brackett",
+        "Camloc",
         "castellation",
         "castellations",
+        "CEET",
         "Chromated",
         "Chromel",
+        "crashworthiness",
         "Fram",
         "FRDS",
         "gatebox",
         "Hartzell",
         "Ignitor",
         "Kawak",
+        "Loctite",
         "Micronair",
         "Olney",
         "overspeed",
@@ -27,10 +32,12 @@
         "Powerplant",
         "pushrod",
         "pushrods",
+        "redeposition",
         "restrictor",
         "SAIB",
         "SCEET",
         "Skurka",
+        "sulphidation",
         "tensioner",
         "Torrington",
         "Tyton",
